# emod-api

./: .bump_version.cfg  .bumpversion.cfg  .gitignore  .readthedocs.yml  Jenkinsfile  LICENSE  MANIFEST.in  README.md  emod_api_build_config.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/build-install-package/: action.yml
.github/scripts/: get_wheel_filename.py  update_pip_conf.py
.github/workflows/: DocsRebuild-Preview-Staging.yml  build_test_publish.yaml  build_test_ubuntu.yaml  build_test_windows.yaml  emod-api-docs-rebuild.yml  emod-api-docspreview.yml  ghcr_emod_run_env.yml  lint.yml  promote_package_to_production.yml  publish_pypi.yml  run-tests.yaml  run-tests.yml  staging-build-package.yml  test_and_bump_version.yml  test_and_publish_package_to_staging.yaml  test_and_publish_package_to_staging.yml  tests_all.yml
docker/: emod_runtime_env
docs/: Makefile  bib.md  conf.py  faq.md  faq.rst  glossary.rst  index.md  index.rst  installation.rst  make.bat  modules.rst  plotters.md  plotters.rst  requirements.txt  variables.txt
docs/_templates/: breadcrumbs.html  footer.html  footer_start.html
emod_api/: __init__.py  __main__.py  campaign.py  multidim_plotter.py  peek_camp.py  schema_to_class.py  utils.py
emod_api/.dtk_tools/: README.md
emod_api/.dtk_tools/climate/: ClimateFileCreator.py
emod_api/.dtk_tools/demographics/: DemographicsGeneratorConcern.py  DemographicsHelperFunctions.py
emod_api/.dtk_tools/migration/: LinkRatesModelGenerator.py  MigrationFile.py  MigrationGenerator.py  StaticLinkRatesModelGenerator.py  createmigrationheader.py
emod_api/.dtk_tools/support/: General.py  compiledemog.py
emod_api/.dtk_tools/utilities/: display_climate.py  visualize_nodes.py  visualize_routes.py
emod_api/channelreports/: README.md  __main__.py  channels.py  icj_to_csv.py  plot_icj_means.py  plot_prop_report.py  utils.py
emod_api/config/: README.md  __main__.py  default_from_schema.py  default_from_schema_no_validation.py  dtk_post_process_adhocevents.py  dtk_pre_process_adhocevents.py  dtk_pre_process_w5ml.py  from_overrides.py  from_poi_and_binary.py  from_schema.py  schema_to_config.py
emod_api/demographics/: BaseInputFile.py  Demographics.py  DemographicsGenerator.py  DemographicsInputDataParsers.py  DemographicsTemplates.py  Node.py  PreDefinedDistributions.py  PropertiesAndAttributes.py  README.md  Updateable.py  __main__.py  age_distribution.py  age_distribution_old.py  base_input_file.py  calculators.py  demographic_exceptions.py  demographics.py  demographics_base.py  demographics_overlay.py  demographics_utils.py  fertility_distribution.py  fertility_distribution_old.py  grid_construction.py  implicit_functions.py  mortality_distribution.py  mortality_distribution_old.py  node.py  overlay_node.py  properties_and_attributes.py  susceptibility_distribution.py  susceptibility_distribution_old.py  updateable.py
emod_api/demographics/service/: grid_construction.py  service.py
emod_api/interventions/: README.md  __main__.py  ccdl.py  ccdl_viz.py  common.py  import_pressure.py  migration.py  node_multiplier.py  outbreak.py  simple_vaccine.py  utils.py
emod_api/legacy/: plotAllCharts.py
emod_api/migration/: README.md  __init__.py  __main__.py  migration.py
emod_api/migration/client/: client.py
emod_api/schema/: README.md  __main__.py  get_schema.py
emod_api/serialization/: CensusAndModPop.py  README.md  SerializedPopulation.py  __main__.py  census_and_mod_pop.py  dtkFileSupport.py  dtkFileTools.py  dtkFileUtility.py  dtk_file_support.py  dtk_file_tools.py  dtk_file_utility.py  serialized_population.py
emod_api/spatialreports/: README.md  __main__.py  plot_spat_means.py  spatial.py
emod_api/tabularoutput/: README.md  __main__.py
emod_api/utils/distributions/: base_distribution.py  bimodal_distribution.py  constant_distribution.py  demographic_distribution_flag.py  distribution_type.py  dual_constant_distribution.py  dual_exponential_distribution.py  exponential_distribution.py  gaussian_distribution.py  log_normal_distribution.py  poisson_distribution.py  uniform_distribution.py  weibull_distribution.py
emod_api/weather/: README.md  __main__.py  weather.py
examples/: default_from_schema.py  insetchart.py  intervention_from_schema.py  migration.py  migration_csv_example.csv  property_report_to_csv.py  serialized_file_mc_to_sc.py  some_config_i_found.py  spatial_report.py  weather_file.py  write_config_from_default_and_params.py
examples/config/: from_schema.py
examples/serialization/: census_and_mod_pop.py
tests/: README.md  Snakefile  camp_test.py  campaign.ccdl  campaign.json  check_coverage.py  config_ccdl.json  demog_gen.py  ipc.py  manifest.py  migration_parameters.json  migration_parameters_2.json  migration_parameters_3.json  outbreak_arguments.py  requirements.txt  sender.py  serialization_test_tools.py  test_camp_common.py  test_camp_common_malaria.py  test_camp_importpressure.py  test_camp_migration.py  test_camp_node_multiplier.py  test_camp_outbreak.py  test_camp_sv.py  test_camp_sv_waning.py  test_campaign_module.py  test_ccdl.py  test_channel_reports.py  test_config.py  test_config_demog.py  test_demog.py  test_demog_Parser.py  test_demog_from_pop.py  test_demog_send_over_pipes.py  test_demog_templates.py  test_demographics.py  test_demographics_calculators.py  test_distributions.py  test_migration.py  test_node.py  (+9 more)
tests/data/config/: input_default_config.json  input_generic_schema.json  (+4 more)
tests/move to delete/: test_demog_helpers.py  test_demog_kmstyle.py  test_demog_krstyle.py
tests/unittests/: test_age_distribution.py  test_config_imports.py  test_demographics_imports.py  test_fertility_distribution.py  test_individual_properties.py  test_migration_imports.py  test_mortality_distribution.py  test_properties_and_attributes.py  test_schema_imports.py  test_susceptibility_distribution.py  test_version.py
(+45 files in other folders)
