[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-api"
version = "2.0.26"
description = "Core tools for modeling using EMOD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"}]
keywords = ['modeling', 'IDM']
dependencies = [
    "numpy!=1.19.4",
    "pyyaml",
    "pandas",
    "scipy",
    "shapely",
    "pyproj",
    "geographiclib",
    "scikit-learn",
    "lz4", # should pick up pre-built Gohlke wheel from Artifactory
    "prodict", # utility for dictionaries
    "graphviz",
    "parse",
    "matplotlib"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Framework:: IDM-Tools :: models",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
[project.urls]
Repository="https://github.com/EMOD-Hub/emod-api"
Issues="https://github.com/EMOD-Hub/emod-api/issues"

[project.optional-dependencies]
test = [
    "emod-common",
    "emod-generic",
    "emod-malaria"
]
packaging = [
    "build",
    "flake8",  # for lint check
    "coverage",
    "py-make",
    "bump2version",
    "twine"]

[tool.setuptools.packages]
find = {include = ["emod_api*"]}

[tool.pip]
extra-index-url = "https://packages.idmod.org/api/pypi/pypi-production/simple"
