[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-api"
version = "2.0.34"
description = "Core tools for modeling using EMOD"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ['modeling', 'IDM']
dependencies = [
    "matplotlib",
    "scipy",
    "pandas",
    "numpy",
    "shapely",
    "pyproj",
    "geographiclib",
    "scikit-learn",
    "lz4",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: IDM-Tools :: models",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
]
lint = [
    "flake8",
]
packaging = [
    "build",
    "twine",
    "bump2version",
]
test = [
    "emod-common",
    "emod-generic",
    "emod-hiv",
    "emod-malaria",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Repository="https://github.com/EMOD-Hub/emod-api"
Issues="https://github.com/EMOD-Hub/emod-api/issues"

[tool.setuptools.packages]
find = {include = ["emod_api*"]}
