[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-api"
version = "3.0.0"
description = "Core tools for modeling using EMOD"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ["modeling", "IDM"]

# ---------------------------------------------------------------
# I want to add "python-snappy==0.6.1", but it requires SnappyC
# to already to be installed on Linux.  It needs to be 0.6.1,
# because more recent versions don't work correctly with our code.
# ---------------------------------------------------------------

dependencies = [
    "matplotlib",
    "scipy",
    "pandas",
    "numpy",
    "shapely",
    "pyproj",
    "geographiclib",
    "scikit-learn",
    "lz4"
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: IDM-Tools :: models",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
]
lint = [
    "flake8",
]
test = [
    "emod-common",
    "emod-generic",
    "emod-hiv",
    "emod-malaria",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/emod-api"
Issues = "https://github.com/EMOD-Hub/emod-api/issues"

[tool.setuptools.packages]
find = {include = ["emod_api*"]}

[tool.bumpversion]
current_version = "3.0.0"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "emod_api/__init__.py"
